# Omniphi

./: .gitignore  AUDIT_REMEDIATION_PLAN.md  AUDIT_REPORT_2025.md  DAY_1_ACTION_PLAN.md  DEPLOYMENT_SUCCESS.md  DEPLOY_COMMANDS.md  DEPLOY_NOW.md  EXECUTIVE_SUMMARY_FOR_LEADERSHIP.md  GUARD_COMMIT_SUMMARY.md  GUARD_IMPLEMENTATION_COMPLETE.md  GUARD_LAYERS_2_3_COMPLETE.md  GUARD_MODULE_COMPLETE.md  GUARD_MODULE_STATUS.md  GUARD_QUICK_START.md  IMMEDIATE_SECURITY_FIXES.md  IMPLEMENTATION_COMPLETE.md  LICENSE  LOCAL_TESTNET_GUIDE.md  Makefile  OMNIPHI_STRATEGIC_VISION_2025.md  QUICK_REFERENCE.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_RE-AUDIT_REPORT.md  SESSION_SUMMARY_2026-02-03.md  TECHNICAL_IMPLEMENTATION_ROADMAP.md  TEST_RESULTS_HIGH2_POC.md  TIMELOCK_COMPLETE.md  TIMELOCK_IMPLEMENTATION_SUMMARY.md  deploy-timelock-final.sh  deploy-timelock.sh  deploy-validators.sh  fix-genesis-timelock.sh
contract-toolkit/: Cargo.toml  README.md
contract-toolkit/src/: compiler.rs  main.rs  schema.rs  tester.rs  validator.rs
contract-toolkit/templates/: counter.yaml  escrow.yaml
poseq/: .gitignore  Cargo.toml
poseq/.cargo/: config.toml
poseq/benches/: bench_batching.rs  bench_intent_pipeline.rs  bench_ordering.rs  bench_pipeline.rs  bench_queue.rs  bench_validation.rs
poseq/config/: devnet-bootstrap.toml  example-node.toml  node1.toml  node2.toml  node3.toml
poseq/docs/: NETWORKING.md  PERSISTENCE.md  POSEQ_PHASE2.md  POSEQ_PHASE3.md  POSEQ_PHASE5.md
poseq/fuzz/: Cargo.toml
poseq/fuzz/fuzz_targets/: fuzz_bridge_envelope.rs  fuzz_checkpoint_restore.rs  fuzz_evidence_packaging.rs  fuzz_finalization.rs  fuzz_ordering_engine.rs  fuzz_submission_validator.rs
poseq/src/: audit_conformance.rs  errors.rs  fixture_tests.rs  lib.rs  resource_bounds.rs
poseq/src/adjudication/: engine.rs  mod.rs
poseq/src/anti_mev/: engine.rs  mod.rs  policy.rs
poseq/src/attestation/: record.rs
poseq/src/attestations/: collector.rs
poseq/src/auction/: da_checks.rs  mod.rs  ordering.rs  state.rs  types.rs
poseq/src/batching/: builder.rs
poseq/src/bonding/: mod.rs  record.rs  store.rs
poseq/src/bridge/: hardened.rs  mod.rs  pipeline.rs  runtime.rs  runtime_channel.rs
poseq/src/bridge_recovery/: mod.rs
poseq/src/chain_bridge/: anchor.rs  contracts.rs  escalation.rs  evidence.rs  exporter.rs  mod.rs  snapshot.rs
poseq/src/checkpoints/: mod.rs  persistence.rs
poseq/src/commitment/: hash.rs
poseq/src/committee/: membership.rs
poseq/src/committee_rotation/: engine.rs  mod.rs  snapshot.rs
poseq/src/config/: full_config.rs  mod.rs  node_config_file.rs  policy.rs
poseq/src/conflicts/: detector.rs
poseq/src/crypto/: keystore.rs  mod.rs  node_keys.rs  payloads.rs  registry.rs  signer.rs  verifier.rs
poseq/src/devnet/: mod.rs
poseq/src/enforcement/: classification.rs  mod.rs  rules.rs
poseq/src/epochs/: boundary.rs  mod.rs  rotation.rs  state.rs
poseq/src/failure/: intent_failures.rs  mod.rs  sequencing_failures.rs  solver_failures.rs
poseq/src/fairness/: classification.rs  evidence.rs  log.rs  mod.rs  policy.rs
poseq/src/fairness_audit/: records.rs
poseq/src/fairness_bridge/: envelope.rs  mod.rs
poseq/src/fairness_config/: config.rs
poseq/src/fairness_incidents/: detector.rs
poseq/src/fairness_persistence/: ledger.rs  mod.rs
poseq/src/fairness_validation/: validator.rs
poseq/src/finality/: commitment.rs  mod.rs  validator_checks.rs
poseq/src/finalization/: engine.rs
poseq/src/fuzz/: mod.rs
poseq/src/gas/: accounting.rs  calculator.rs  estimation.rs  lifecycle.rs  mod.rs  parameters.rs  priority.rs  routing.rs  simulation.rs  solver_market.rs  stress.rs  types.rs
poseq/src/genesis/: mod.rs  validation.rs
poseq/src/hotstuff/: engine.rs  mod.rs  pacemaker.rs  persistence.rs  types.rs  verification.rs
poseq/src/identities/: mod.rs  node.rs  registry.rs
poseq/src/inclusion/: engine.rs
poseq/src/intake/: receiver.rs
poseq/src/intent_pool/: config.rs  constants.rs  lifecycle.rs  (+3 more)
poseq/tests/: chaos_tests.rs  test_adversarial.rs  test_batching.rs  test_bridge.rs  test_cross_lane_activation.rs  test_determinism.rs  test_devnet_chaos.rs  test_distributed_simulation.rs  test_dual_lane_e2e.rs  test_fuzz_state_machine.rs  test_hotstuff_adversarial.rs  test_intent_e2e.rs  test_live_cluster.rs  test_network_hardening.rs  test_operational.rs  test_ordering.rs  test_persistence_recovery.rs  test_phase7b_proof.rs  test_poseq_e2e.rs  test_receipts.rs  test_state_sync.rs  test_submission.rs  test_validation.rs
sdk/python/: README.md  pyproject.toml
solver/: Cargo.toml
solver/src/: config.rs  lib.rs  metrics.rs  runner.rs
(+1655 files in other folders)
