[package]
name = "omniphi-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
# Cross-crate dependencies
omniphi-poseq = { path = "../poseq" }
omniphi-runtime = { path = "../runtime" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"

[[bin]]
name = "omniphi-solver"
path = "src/bin/solver_main.rs"
